--- a/src/components/SeperateProduct.css
+++ b/src/components/SeperateProduct.css
@@ -74,8 +74,8 @@
         transform: scale(1.1) !important;
         transition: transform 0.3s ease;
         position: relative;
-        left : -20% !important;
-        margin-top: 20px;
+        margin-left: 20px !important;
+        margin-bottom: 100px !important;
 
     }
     .separate-product-image:hover{
@@ -99,33 +99,35 @@
     .separate-product-details-card {
         height: 100%;
         position: relative;
-        margin-right: 180px !important;
+        left:-5% !important;
         top: 15% !important;
+        max-width: 100vw;
+        overflow-x: hidden;
+        width: 80%;
     }
 }
 @media(max-width:768px) {
     .separate-product-details-card {
         height: 100%;
         position: relative;
-        margin-left: 70px !important;
-        top:15% !important;
+        left:-5% !important;
+        top:20% !important;
+        max-width: 100vw !important;
+        width: 80vw !important;
     }
 }
 @media(max-width:576px) {
     .separate-product-details-card {
         height: 100%;
-        position: fixed;
-        left: 1% !important;
-        top: 12% !important;
+        position: relative;
+        top: 5% !important;
+        margin-left: 35px !important;
+        overflow-x: none !important;
+        max-width: 100vw  !important;
+        width: 80% !important;
     }
 }
-@media(max-width:576px) {
-    .separate-product-details-card {
-        height: 100%;
-        position: fixed;
-        right: 10%;
-    }
-}
+
 @media(max-width:768px) {
     .separate-product-details-card {
         height: 100%;
